--- a/JKE_DB_GIT.yml
+++ b/JKE_DB_GIT.yml
@@ -49,7 +49,7 @@ resources:
       user_data: {get_resource: ubuntu-trusty-cloudimg-amd64_mime}
       networks:
           - port: { get_resource: ubuntu-trusty-cloudimg-amd64_32153043-24c9-45e5-91a1-0d6a53edff7c_port  }
-      name: 'JKE Database Server'
+      name: 'JKE Database Server NEW'
       image: "17b7c340-44b7-4fe2-8ba4-e6f7716cf26c" # ubuntu-trusty-cloudimg-amd64
       flavor: { get_param: flavor }
       key_name: { get_param: key_name }
